fixes the overflow from the carousel

--- a/app/components/Sections/ReferralsSection/ReferralsSection.module.css
+++ b/app/components/Sections/ReferralsSection/ReferralsSection.module.css
@@ -1,17 +1,8 @@
-/* .referrals_container__wrapper {
-  background-color: black;
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  justify-content: space-between;
-  width: 850px;
-} */
-
 .referral_group {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 100%;
+  max-width: 700px;
 }
 
 .referral_single:first-of-type {
